--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>HTML Images</title>
+</head>
+
+<body>
+  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg?raw=true">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg?raw=true" alt="Lion Roaring in the Savannah">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg?raw=true" alt="Lion Roaring in the Savannah"
+    title="King of the Jungle">
+</body>
+
 </html>
